--- a/benchmarl/conf/experiment/base_experiment.yaml
+++ b/benchmarl/conf/experiment/base_experiment.yaml
@@ -3,12 +3,12 @@ defaults:
   - _self_
 
 # The device for collection (e.g. cuda)
-sampling_device: "cpu"
+sampling_device: "cuda"
 # The device for training (e.g. cuda)
-train_device: "cpu"
+train_device: "cuda"
 # The device for the replay buffer of off-policy algorithms (e.g. cuda).
 # Use "disk" to store it on disk (in the experiment save_folder)
-buffer_device: "cpu"
+buffer_device: "cuda"
 
 # Whether to share the parameters of the policy within agent groups
 share_policy_params: True
@@ -49,7 +49,7 @@ exploration_anneal_frames: null
 # The maximum number of experiment iterations before the experiment terminates, exclusive with max_n_frames
 max_n_iters: null
 # Number of collected frames before ending, exclusive with max_n_iters
-max_n_frames: 3_000_000
+max_n_frames: 300_000
 
 # Number of frames collected and each experiment iteration
 on_policy_collected_frames_per_batch: 6000
@@ -74,7 +74,7 @@ off_policy_n_optimizer_steps: 1000
 # Number of frames used for each off_policy_n_optimizer_steps when training off-policy algorithms
 off_policy_train_batch_size: 128
 # Maximum number of frames to keep in replay buffer memory for off-policy algorithms
-off_policy_memory_size: 1_000_000
+off_policy_memory_size: 300_000
 # Number of random action frames to prefill the replay buffer with
 off_policy_init_random_frames: 0
 # whether to use priorities while sampling from the replay buffer
@@ -90,7 +90,7 @@ evaluation: True
 # Whether to render the evaluation (if rendering is available)
 render: True
 # Frequency of evaluation in terms of collected frames (this should be a multiple of on/off_policy_collected_frames_per_batch)
-evaluation_interval: 120_000
+evaluation_interval: 20_000
 # Number of episodes that evaluation is run on
 evaluation_episodes: 10
 # If True, when stochastic policies are evaluated, their deterministic value is taken, otherwise, if False, they are sampled
